--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,13 +19,12 @@ jobs:
             docker-compose up -d
       - run:
          name: wait for db
-         command: sleep 200
+         command: sleep 100
       - run:
           name: Setup database
           command: |
             docker-compose ps -a
-            docker-compose exec web bash -c 'yarn install --check-files'
-            docker-compose ps logs
+            docker-compose run web bash -c 'yarn update'
             docker-compose exec web bash -c 'bundle exec rails db:create'
             docker-compose exec web bash -c 'bundle exec rails db:migrate'
       - run:
