--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,8 @@ jobs:
       - run:
           name: Start containers
           command: |
+            yarn -v
+            yarn install
             set -x
             docker-compose up -d
       - run:
