--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,9 +15,8 @@ jobs:
       - run:
           name: Start containers
           command: |
-            yarn -v
-            yarn install
             set -x
+            docker-compose run web bash -c 'yarn install'
             docker-compose up -d
       - run:
          name: wait for db
@@ -32,7 +31,6 @@ jobs:
       - run:
           name: yarn Install
           command: |
-            docker-compose exec web bash -c 'yarn install'
             docker-compose exec web bash -c 'bundle exec bin/webpack'
       - run:
           name: Run rspec
